tools/envoy_app.yaml
{
    "admin": {
        "access_log_path": "/tmp/admin_access.log", 
        "address": {
            "socket_address": {
                "address": "0.0.0.0", 
                "port_value": 9901
            }
        }
    }, 
    "dynamic_resources": {
        "ads_config": {
            "api_type": "GRPC", 
            "grpc_services": [
                {
                    "envoy_grpc": {
                        "cluster_name": "ads_cluster"
                    }
                }
            ]
        }, 
        "cds_config": {
            "ads": {}
        }, 
        "lds_config": {
            "ads": {}
        }
    }, 
    "node": {
        "cluster": "app_envoy_cluster", 
        "id": "app_envoy"
    }, 
    "static_resources": {
        "clusters": [
            {
                "connect_timeout": "0.250s", 
                "http2_protocol_options": {}, 
                "load_assignment": {
                    "cluster_name": "ads_cluster", 
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "address": "xds.100.com", 
                                                "port_value": 5678
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                }, 
                "name": "ads_cluster", 
                "type": "STRICT_DNS"
            }, 
            {
                "circuit_breakers": {
                    "thresholds": [
                        {
                            "max_connections": 100000, 
                            "max_pending_requests": 100000, 
                            "max_requests": 100000
                        }
                    ]
                }, 
                "connect_timeout": "0.250s", 
                "http2_protocol_options": {}, 
                "load_assignment": {
                    "cluster_name": "local_app", 
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "address": "127.0.0.1", 
                                                "port_value": 17001
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                }, 
                "name": "local_app", 
                "type": "STATIC"
            }
        ], 
        "listeners": [
            {
                "address": {
                    "socket_address": {
                        "address": "0.0.0.0", 
                        "port_value": 16000
                    }
                }, 
                "filter_chains": [
                    {
                        "filters": [
                            {
                                "name": "envoy.http_connection_manager", 
                                "typed_config": {
                                    "@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager", 
                                    "add_user_agent": true, 
                                    "codec_type": "AUTO", 
                                    "http_filters": [
                                        {
                                            "name": "envoy.router"
                                        }
                                    ], 
                                    "route_config": {
                                        "name": "local_route", 
                                        "virtual_hosts": [
                                            {
                                                "domains": [
                                                    "*"
                                                ], 
                                                "name": "local_service", 
                                                "routes": [
                                                    {
                                                        "match": {
                                                            "grpc": {}, 
                                                            "prefix": "/"
                                                        }, 
                                                        "route": {
                                                            "cluster": "local_app"
                                                        }
                                                    }
                                                ]
                                            }
                                        ]
                                    }, 
                                    "stat_prefix": "ingress_http", 
                                    "tracing": {
                                        "operation_name": "INGRESS", 
                                        "request_headers_for_tags": [
                                            "suid", 
                                            "uid", 
                                            "UUID"
                                        ]
                                    }, 
                                    "use_remote_address": true
                                }
                            }
                        ]
                    }
                ], 
                "name": "ingress_listener"
            }, 
            {
                "address": {
                    "socket_address": {
                        "address": "0.0.0.0", 
                        "port_value": 18001
                    }
                }, 
                "filter_chains": [
                    {
                        "filters": [
                            {
                                "name": "envoy.http_connection_manager", 
                                "typed_config": {
                                    "@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager", 
                                    "add_user_agent": true, 
                                    "codec_type": "AUTO", 
                                    "generate_request_id": true, 
                                    "http_filters": [
                                        {
                                            "name": "envoy.router"
                                        }
                                    ], 
                                    "rds": {
                                        "config_source": {
                                            "ads": {}
                                        }, 
                                        "route_config_name": "ads_route"
                                    }, 
                                    "stat_prefix": "egress_http", 
                                    "tracing": {
                                        "operation_name": "EGRESS", 
                                        "request_headers_for_tags": [
                                            "suid", 
                                            "uid", 
                                            "UUID"
                                        ]
                                    }, 
                                    "use_remote_address": true
                                }
                            }
                        ]
                    }
                ], 
                "name": "egress_listener"
            }
        ]
    }, 
    "tracing": {
        "http": {
            "name": "envoy.dynamic.ot", 
            "typed_config": {
                "@type": "type.googleapis.com/envoy.config.trace.v2.DynamicOtConfig", 
                "config": {
                    "baggage_restrictions": {
                        "denyBaggageOnInitializationFailure": false, 
                        "hostPort": ""
                    }, 
                    "headers": {
                        "jaegerBaggageHeader": "jaeger-baggage", 
                        "jaegerDebugHeader": "jaeger-debug-id", 
                        "traceBaggageHeaderPrefix": "uberctx-"
                    }, 
                    "reporter": {
                        "localAgentHostPort": "127.0.0.1:6831"
                    }, 
                    "sampler": {
                        "param": 1, 
                        "type": "const"
                    }, 
                    "service_name": "app-envoy"
                }, 
                "library": "/data/services/libs/lib64/libjaegertracing.so"
            }
        }
    }
}
